responsive correction mobile

--- a/assets/sass/css/styles.scss
+++ b/assets/sass/css/styles.scss
@@ -1,3 +1,9 @@
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 #introduction {
   background-image: url(https://pictures.ubiq.fr/c55dd5a6-dd90-4181-90e7-6c5708333612/-/quality/lighter/-/resize/2000x/);
   object-fit: cover;
@@ -94,7 +100,6 @@ header {
   }
   p {
     color: white;
-    border-radius: 5px;
     font-style: italic;
     font-size: 1.1em;
     margin: 10px 50px 20px;
@@ -341,4 +346,166 @@ footer {
   }
 }
 
+/***************************************
+********** RESPONSIVE MOBILE********/
 
+@media screen and (max-width: 400px) {
+  header {
+    margin-left: -230px;
+    nav {
+      font-size: 1em;
+    }
+  }
+  #presentation {
+    img {
+      width: 50%;
+    }
+  }
+  #About {
+    display: flex;
+    flex-direction: column;
+    margin-left: 90px;
+    width: 50%;
+    p {
+      margin: 0;
+      font-size: 1.1em;
+    }
+    button {
+      margin-top: 20px;
+      margin-left: 20%;
+    }
+  }
+
+  #SKILLS {
+    display: flex;
+    flex-direction: column;
+    height: 90%;
+
+    article {
+      flex-direction: column;
+      img {
+        padding-left: 35px;
+        width: 120px;
+      }
+    }
+  }
+
+  #Project {
+    h1 {
+      margin-right: 40px;
+    }
+    h4 {
+      font-size: 0.8em;
+    }
+
+    article {
+      display: flex;
+      flex-direction: column;
+      margin-left: -20px;
+    }
+    #Booki {
+      img {
+        width: 80%;
+        margin-left: 3%;
+      }
+    }
+    #lapanthere {
+      h4 {
+        width: 70%;
+      }
+      img {
+        margin-left: -10%;
+      }
+    }
+    #Kanap {
+      img {
+        margin-left: 20%;
+      }
+    }
+    #Piquante {
+      img {
+        margin-left: 2%;
+        width: 80%;
+      }
+    }
+    #kasa {
+      img {
+        margin-left: 10%;
+      }
+    }
+  }
+  footer {
+    div {
+      margin-left: 20%;
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  #About {
+    p {
+      font-size: 0.9em;
+    }
+  }
+  #SKILLS {
+    h1 {
+      margin-left: -15px;
+    }
+    article {
+      img {
+        margin-left: 85px;
+        width: 35%;
+      }
+    }
+  }
+
+  #Project {
+    h1 {
+      font-size: 1.2em;
+      margin-left: 35px;
+    }
+    h4 {
+      font-size: 1em;
+    }
+    article {
+      p {
+        font-size: 0.8em;
+      }
+    }
+
+    #Booki {
+      p {
+        margin-left: 30px;
+      }
+      img {
+        margin-left: 50px;
+      }
+    }
+    #lapanthere {
+      p {
+        margin-left: 30px;
+      }
+    }
+    #Kanap {
+      p {
+        margin-left: 30px;
+      }
+    }
+    #Piquante {
+      p {
+        margin-left: 30px;
+      }
+      img {
+        margin-left: 30px;
+      }
+    }
+    #kasa {
+      p {
+        margin-left: 30px;
+      }
+      img {
+        margin-left: 50px;
+      }
+    }
+  }
+}
